Change quesObj.question from a string to a string list.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -51,6 +51,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\Game\BossEvents.cs" />
      <Compile Include="Assets\Scripts\Game\ChapterEvents.cs" />
      <Compile Include="Assets\Scripts\Game\DatasControl.cs" />
      <Compile Include="Assets\Scripts\Game\Npc.cs" />
