modify three game modes' userAnsObj

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
      <Compile Include="Assets\Scripts\Game\StageEvents.cs" />
      <Compile Include="Assets\Scripts\Game\TypeMode.cs" />
      <Compile Include="Assets\Scripts\Math\MathDatasControl.cs" />
+     <Compile Include="Assets\Scripts\Math\misIdentify.cs" />
      <Compile Include="Assets\Scripts\Other\Collision.cs" />
      <Compile Include="Assets\Scripts\Other\Datas.cs" />
      <Compile Include="Assets\Scripts\Other\GameSetting.cs" />
