--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -69,6 +69,7 @@
      <Compile Include="Assets\Scripts\Other\Datas.cs" />
      <Compile Include="Assets\Scripts\Other\GameSetting.cs" />
      <Compile Include="Assets\Scripts\Other\InfinityBackground.cs" />
+     <None Include="Assets\Resources\TextQuestionFile\stage13.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
